--- a/res/layout/devicelist.xml
+++ b/res/layout/devicelist.xml
@@ -34,7 +34,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:background="#4a4c4d" />
-
+
             <ImageView
                 android:id="@+id/StatsImage"
                 android:layout_width="wrap_content"
@@ -42,15 +42,16 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="12dp"
+                android:contentDescription="@string/deviceListIconDesc"
                 android:src="@drawable/ic_action_devices" />
-
+
             <TextView
                 android:id="@+id/ServerCountLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/StatsImage"
-                android:text="Calculating server count..."
+                android:text="@string/deviceListServerCount"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/RhybuddOffWhite" />
 
