--- a/res/layout/rhybudd_home.xml
+++ b/res/layout/rhybudd_home.xml
@@ -20,13 +20,14 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true" />
-
+
 <ImageView
     android:id="@+id/imageView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
+    android:contentDescription="@string/homeLogos"
     android:src="@drawable/zenoss_3" />
 
     </RelativeLayout>
