--- a/res/layout/add_message.xml
+++ b/res/layout/add_message.xml
@@ -1,5 +1,9 @@
 
-    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/widget_background">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
         <EditText android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/LogMessage" android:lines="3" android:gravity="top|left" android:layout_centerHorizontal="true" android:layout_width="260dp">
             <requestFocus></requestFocus>
         </EditText>
