--- a/res/layout/settings_initial.xml
+++ b/res/layout/settings_initial.xml
@@ -44,7 +44,7 @@
                 <requestFocus>
                 </requestFocus>
             </EditText>
-
+
             <EditText
                 android:id="@+id/ZenossUserName"
                 android:layout_width="fill_parent"
@@ -53,10 +53,11 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="6dp"
-                android:hint="Zenoss User Name"
+                android:hint="@string/UserNameHint"
                 android:inputType="textPersonName" >
-            </EditText>
 
+            </EditText>
+
             <EditText
                 android:id="@+id/ZenossPassword"
                 android:layout_width="fill_parent"
@@ -64,8 +65,9 @@
                 android:layout_below="@+id/ZenossUserName"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:hint="Zenoss Password"
+                android:hint="@string/PasswordHint"
                 android:inputType="textPassword" >
+
             </EditText>
 
             <TextView
@@ -102,16 +104,16 @@
             android:layout_below="@+id/basicAuthPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="Save Settings &amp; Login" />
-
+            android:text="@string/SaveSettingsButton" />
+
             <CheckBox
                 android:id="@+id/basicAuthCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/settingsDesc"
                 android:layout_below="@+id/divider1"
-                android:text="Enable HTTP Basic Auth" />
-
+                android:text="@string/EnableHTTPAuthCheck" />
+
             <EditText
                 android:id="@+id/basicAuthUser"
                 android:layout_width="wrap_content"
@@ -120,9 +122,9 @@
                 android:layout_alignRight="@+id/ZenossPassword"
                 android:layout_below="@+id/basicAuthCheckBox"
                 android:ems="10"
-                android:hint="HTTP Basic Auth User"
+                android:hint="@string/HTTPAuthUserNameHint"
                 android:inputType="textNoSuggestions" />
-
+
             <EditText
                 android:id="@+id/basicAuthPassword"
                 android:layout_width="wrap_content"
@@ -132,7 +134,7 @@
                 android:layout_below="@+id/basicAuthUser"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:hint="HTTP Basic Auth Password"
+                android:hint="@string/HTTPAuthPasswordHint"
                 android:inputType="textPassword" />
 
         </RelativeLayout>
