--- a/res/layout/view_zenoss_device3.xml
+++ b/res/layout/view_zenoss_device3.xml
@@ -21,7 +21,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/device_grid_background" >
-
+
         <TextView
             android:id="@+id/deviceIDTitle"
             android:layout_width="wrap_content"
@@ -38,14 +38,14 @@
             android:layout_below="@+id/deviceIDTitle"
             android:text="-"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/UptimeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/deviceID"
-            android:text="Uptime:"
+            android:text="@string/uptimeLabel"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -76,14 +76,14 @@
             android:layout_below="@+id/FirstSeenTitle"
             android:text="Today"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/lastChangeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/firstSeen"
-            android:text="Last Change:"
+            android:text="@string/deviceDetailsLastChange"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -95,14 +95,14 @@
             android:layout_below="@+id/lastChangeTitle"
             android:text="Today"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/modelTimeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/lastChange"
-            android:text="Model Time:"
+            android:text="@string/deviceDetailsModelTime"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -114,14 +114,14 @@
             android:layout_below="@+id/modelTimeTitle"
             android:text="Today"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/memoryTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/modelTime"
-            android:text="Memory / Swap:"
+            android:text="@string/deviceDetailsMemorySwap"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -145,14 +145,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/device_grid_background" >
-
+
         <TextView
             android:id="@+id/locationTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="SNMP Location:"
+            android:text="@string/deviceDetailsSNMPLocation"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -164,14 +164,14 @@
             android:layout_below="@+id/locationTitle"
             android:text="-"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/contactTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/location"
-            android:text="SNMP Contact:"
+            android:text="@string/deviceDetailsSNMPContact"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -200,14 +200,14 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/device_grid_background"
         android:minHeight="200dp" >
-
+
         <TextView
             android:id="@+id/productionStateLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="Production State:"
+            android:text="@string/deviceDetailsProductionStateLabel"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -219,14 +219,14 @@
             android:layout_below="@+id/productionStateLabel"
             android:text="-"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/GroupsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/productionState"
-            android:text="Groups:"
+            android:text="@string/deviceDetailsGroupsLabel"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -238,14 +238,14 @@
             android:layout_below="@+id/GroupsTitle"
             android:text="-"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/SystemsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/groups"
-            android:text="Systems:"
+            android:text="@string/deviceDetailsSystemsLabel"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
@@ -257,14 +257,14 @@
             android:layout_below="@+id/SystemsTitle"
             android:text="-"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
+
         <TextView
             android:id="@+id/eventsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/systems"
-            android:text="Events:"
+            android:text="@string/deviceDetailsEventsTitle"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold" />
 
