--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -86,6 +86,18 @@
                 android:dependency="AllowBackgroundService"
                 />
         
+        <EditTextPreference
+                android:key="SummaryFilter"
+                android:summary="Only raise an alert for events whose summary matches this field. (Use | to separate terms)" 
+                android:title="Summary Filter"
+                android:dialogTitle="Summary Filter" />
+        
+        <EditTextPreference
+                android:key="DeviceFilter"
+                android:summary="Only raise an alert for events from devices whose name matches this field. (Use | to separate terms)" 
+                android:title="Device Name Filter"
+                android:dialogTitle="Device Name Filter" />
+        
 		<CheckBoxPreference
                 android:key="notificationSound"
                 android:title="Enable Audible Alerts"
