--- a/res/layout/settings_initial.xml
+++ b/res/layout/settings_initial.xml
@@ -1,10 +1,11 @@
-
-    <ScrollView android:id="@+id/scrollView1"
+<ScrollView android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
-
+        android:layout_height="fill_parent" 
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
         <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/relativeLayout1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -44,7 +45,8 @@
                 <requestFocus>
                 </requestFocus>
             </EditText>
-
+
+
             <EditText
                 android:id="@+id/ZenossUserName"
                 android:layout_width="fill_parent"
@@ -57,7 +59,8 @@
                 android:inputType="textPersonName" >
 
             </EditText>
-
+
+
             <EditText
                 android:id="@+id/ZenossPassword"
                 android:layout_width="fill_parent"
@@ -84,7 +87,6 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <ImageView
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/divider1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -100,12 +102,15 @@
             android:id="@+id/SaveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentBottom="false"
             android:layout_below="@+id/basicAuthPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="@string/SaveSettingsButton" />
-
+
+
+
+
             <CheckBox
                 android:id="@+id/basicAuthCheckBox"
                 android:layout_width="wrap_content"
@@ -113,7 +118,16 @@
                 android:layout_alignLeft="@+id/settingsDesc"
                 android:layout_below="@+id/divider1"
                 android:text="@string/EnableHTTPAuthCheck" />
-
+
+
+
+
+
+
+
+
+
+
             <EditText
                 android:id="@+id/basicAuthUser"
                 android:layout_width="wrap_content"
@@ -124,7 +138,14 @@
                 android:ems="10"
                 android:hint="@string/HTTPAuthUserNameHint"
                 android:inputType="textNoSuggestions" />
-
+
+
+
+
+
+
+
+
             <EditText
                 android:id="@+id/basicAuthPassword"
                 android:layout_width="wrap_content"
@@ -136,6 +157,20 @@
                 android:ems="10"
                 android:hint="@string/HTTPAuthPasswordHint"
                 android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/debugOutput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/basicAuthPassword"
+                android:layout_alignParentBottom="true"
+                android:layout_alignRight="@+id/basicAuthPassword"
+                android:layout_below="@+id/SaveButton"
+                android:inputType="text"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/WarningRed" />
 
         </RelativeLayout>
     
