--- a/res/values/rhybudd_theme.xml
+++ b/res/values/rhybudd_theme.xml
@@ -1,7 +1,19 @@
 <resources>
-<style name="rhybudd_default" parent="Theme.Sherlock.Light.DarkActionBar">
+<style name="rhybudd_default" parent="@android:style/Theme.Holo.Light.DarkActionBar">
     
     
     
 </style>
+
+    <style name="ButtonText">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
 </resources>
