--- a/res/drawable/small_blue_button.xml
+++ b/res/drawable/small_blue_button.xml
@@ -2,36 +2,32 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape>
-            <solid
-                android:color="@color/ZaasLightBlue" />
+            <solid android:color="@color/ZaasLightBlue" />
             <stroke
                 android:width="1dp"
                 android:color="@color/ZaasDarkBlue" />
             <corners
                 android:radius="3dp" />
             <padding
-                android:left="10dp"
-                android:top="8dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+                android:left="6dp"
+                android:top="6dp"
+                android:right="6dp"
+                android:bottom="6dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <gradient
-                android:startColor="@color/ZaasLightBlue"
-                android:endColor="@color/ZaasDarkBlue"
-                android:angle="270" />
+            <solid android:color="@color/ZaasDarkBlue" />
             <stroke
                 android:width="1dp"
                 android:color="@color/ZaasDarkBlue" />
             <corners
                 android:radius="4dp" />
             <padding
-                android:left="10dp"
-                android:top="8dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+                android:left="6dp"
+                android:top="6dp"
+                android:right="6dp"
+                android:bottom="6dp" />
         </shape>
     </item>
 </selector>
