--- a/res/layout/zenoss_event_listitem_large.xml
+++ b/res/layout/zenoss_event_listitem_large.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="10dp"
         android:indeterminate="true" >
 
     </ProgressBar>
@@ -58,17 +58,17 @@
             android:id="@+id/SeverityImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/severity_info" />
+            android:src="@drawable/ic_info" />
 
 
 
 
         <ToggleButton
             android:id="@+id/cabSelect"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginTop="4dp"
-            android:background="@drawable/rhybudd_selector"
+            android:background="@drawable/event_list_cab_button"
             android:textOn="@string/empty"
             android:textOff="@string/empty" />
 
