--- a/res/values/rhybudd_colors.xml
+++ b/res/values/rhybudd_colors.xml
@@ -33,4 +33,17 @@
         <color name="ZaasDarkGray">#343434</color>
 
         <color name="pressed_rhybudd_default">#CC66C1DE</color>
+
+        <color name="transparant">#00000000</color>
+        <color name="PartialWhiteTransparancy">#AFFFFFFF</color>
+
+        <color name="FlatGray">#e5e5e5</color>
+
+        <!-- Reply Colors -->
+        <color name="MetaTop">#fbfbfc</color>
+        <color name="MetaBottom">#f1f1f1</color>
+        <color name="MetaText">#6b6b6b</color>
+        <color name="MetaEdge">#d9d9d9</color>
+
+
 </resources>
