--- a/res/layout/zenoss_event_listitem_large.xml
+++ b/res/layout/zenoss_event_listitem_large.xml
@@ -115,7 +115,8 @@
         android:text="TextView"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/RhybuddStdText"
-        android:paddingLeft="8dp"/>
+        android:paddingLeft="8dp"
+        android:layout_marginRight="8dp"/>
 
 
 
