--- a/res/layout/zenoss_event_listitem_large.xml
+++ b/res/layout/zenoss_event_listitem_large.xml
@@ -93,7 +93,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/RhybuddTitleText"
         android:textStyle="bold"
-        android:paddingLeft="8dp"/>
+        android:paddingLeft="8dp"
+        android:typeface="normal"/>
 
 
 
